Сделал главную страницу и страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>HTML Academy: Техномарт</title>
+</head>
+<body>
 <header>
 <nav>
 <div><a href="index.html"><h1 class="invisible">Техномарт</h1></a></div>
 <div><a href="search.html">Поиск:</a></div>
-<div><a href="bookmarks.html">Закладки: 0</a></div>
+<div><a href="bookmarks.html">Закладки: 10</a></div>
 <div><a href="basket.html">Корзина: 0</a></div>
 <div><a href="new-order.html">Оформить заказ</a></div>
 </nav>
@@ -18,8 +18,10 @@
 </h2>
 <p class="tel">+7 (812) 555-05-55</p>
 <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-<div><!-- Здесь будет форма input type="button" value="Войти"-->Войти</div>
-<div><a href="registration.html">Регистрация</a></div>
+<div>
+<a href="id128475.html">Равшан Джамшутович</a>
+<!-- Здесь будет форма input type="button" name="Выйти"-->
+</div>
 <ul>
 <li><a href="index.html">Главная</a></li>
 <li><a href="about-company.html">Компания</a></li>
@@ -31,22 +33,46 @@
 </ul>
 </header>
 <main>
-<section class="m-5">
-<h3>Компания "Техномарт"</h3>
-<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными  любителей сэкономить на гастарбайтерах.</p>
-<p>Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
 <ul>
-<li>Деловые линии</li>
-<li>Автотрейдинг</li>
-<li>ЖелДорЭкспедиция</li>
+<li><a href="index.html"><img src="house.jpg"></a></li>
+<li><a href="catalog.html">Каталог</a></li>
+<li><a href="tool.html">Инструмент</a></li>
+<li><a href="perforators.html">Перформаторы</a></li>
 </ul>
-<div><a href="about-company.html">Подробнее о компании</a></div>
-<h3>Контакты</h3>
-<p>Вы можете забрать товар сами, заехав в наш офис:</p>
-<a href="map.html"><img src="map.jpg"></a>
-<div><a href="contact-to-us.html">Заблудились? Напишите нам!</a></div>
+<section class="b-1">
+<h3>
+Перфораторы
+</h3>
+<h4>Производители:</h4>
+<!-- Здесь будет форма "мультиселект"-->
+<ul>
+<li>Bosh</li>
+<li>Интерскол</li>
+<li>Makita</li>
+<li>Dewalt</li>
+<li>Hitachi</li>
+</ul>
+<h4>Питание:</h4>
+<!-- Здесь будет форма "переключатель"-->
+<ul>
+<li>Аккумуляторные</li>
+<li>Сетевые</li>
+</ul>
+<!-- Здесь будет форма "кнопка"-->
+<div>Показать</div>
+<ul>
+<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 3000 <br>22500 Р. <br>15500 Р.</li>
+<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 6000 <br>30500 Р. <br>25500 Р.</li>
+<li><a href="buy-page.html">Купить</a><!--тут будет форма кнопки для добавления в закладки--><br>В закладки <br>Перфоратор Bosh BFG 2000 <br>12500 Р.</li>
+<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 3000 <br>22500 Р. <br>15500 Р.</li>
+<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 6000 <br>30500 Р. <br>25500 Р.</li>
+<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 2000 <br>12500 Р.</li>
+<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 3000 <br>22500 Р. <br>15500 Р.</li>
+<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 6000 <br>30500 Р. <br>25500 Р.</li>
+<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 2000 <br>12500 Р.</li>
+</ul>
 </section>
-</main>
+	</main>
 <footer>
 <section class="f-1">
 <div class="low-link"><a href="index.html">Техномарт</a></div>
@@ -82,5 +108,5 @@
 </div>
 </section>
 </footer>
-  </body>
+</body>
 </html>
