--- a/catalog.html
+++ b/catalog.html
@@ -6,107 +6,127 @@
 </head>
 <body>
 <header>
-<nav>
-<div><a href="index.html"><h1 class="invisible">Техномарт</h1></a></div>
-<div><a href="search.html">Поиск:</a></div>
-<div><a href="bookmarks.html">Закладки: 10</a></div>
-<div><a href="basket.html">Корзина: 0</a></div>
-<div><a href="new-order.html">Оформить заказ</a></div>
-</nav>
-<h2 class="invisible-2">
-Интернет-магазин строительных материалов и инструментов для ремонта
-</h2>
-<p class="tel">+7 (812) 555-05-55</p>
-<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-<div>
-<a href="id128475.html">Равшан Джамшутович</a>
-<!-- Здесь будет форма input type="button" name="Выйти"-->
-</div>
-<ul>
-<li><a href="index.html">Главная</a></li>
-<li><a href="about-company.html">Компания</a></li>
-<li><a href="catalog.html">Каталог</a></li>
-<li><a href="news.html">Новости</a></li>
-<li><a href="suggestions.html">Спецпредложения</a></li>
-<li><a href="delivery.html">Доставка</a></li>
-<li><a href="contacts.html">Контакты</a></li>
-</ul>
+  <nav>
+    <div><a href="index.html">
+      <img src="tehnomart.jpg">
+      </a></div>
+    <div><!-- Здесь будет форма input type="text" name="search"--></div>
+    <div><a href="#">Закладки: 10</a></div>
+    <div><a href="#">Корзина: 0</a></div>
+    <div><a href="#">Оформить заказ</a></div>
+  </nav>
+  <h2 class="invisible-2"> Интернет-магазин строительных материалов и инструментов для ремонта </h2>
+  <a href="#" class="tel">+7 (812) 555-05-55</a>
+  <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+  <div> <a href="id128475.html">Равшан Джамшутович</a> 
+    <!-- Здесь будет форма input type="button" name="exit"--> 
+  </div>
+	<nav>
+  <ul>
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="about-company.html">Компания</a></li>
+    <li><a href="catalog.html">Каталог</a></li>
+    <li><a href="news.html">Новости</a></li>
+    <li><a href="suggestions.html">Спецпредложения</a></li>
+    <li><a href="delivery.html">Доставка</a></li>
+    <li><a href="contacts.html">Контакты</a></li>
+  </ul>
+	</nav>
 </header>
 <main>
-<ul>
-<li><a href="index.html"><img src="house.jpg"></a></li>
-<li><a href="catalog.html">Каталог</a></li>
-<li><a href="tool.html">Инструмент</a></li>
-<li><a href="perforators.html">Перформаторы</a></li>
-</ul>
-<section class="b-1">
-<h3>
-Перфораторы
-</h3>
-<h4>Производители:</h4>
-<!-- Здесь будет форма "мультиселект"-->
-<ul>
-<li>Bosh</li>
-<li>Интерскол</li>
-<li>Makita</li>
-<li>Dewalt</li>
-<li>Hitachi</li>
-</ul>
-<h4>Питание:</h4>
-<!-- Здесь будет форма "переключатель"-->
-<ul>
-<li>Аккумуляторные</li>
-<li>Сетевые</li>
-</ul>
-<!-- Здесь будет форма "кнопка"-->
-<div>Показать</div>
-<ul>
-<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 3000 <br>22500 Р. <br>15500 Р.</li>
-<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 6000 <br>30500 Р. <br>25500 Р.</li>
-<li><a href="buy-page.html">Купить</a><!--тут будет форма кнопки для добавления в закладки--><br>В закладки <br>Перфоратор Bosh BFG 2000 <br>12500 Р.</li>
-<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 3000 <br>22500 Р. <br>15500 Р.</li>
-<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 6000 <br>30500 Р. <br>25500 Р.</li>
-<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 2000 <br>12500 Р.</li>
-<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 3000 <br>22500 Р. <br>15500 Р.</li>
-<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 6000 <br>30500 Р. <br>25500 Р.</li>
-<li><img src="perforator152.html"><br>Перфоратор Bosh BFG 2000 <br>12500 Р.</li>
-</ul>
-</section>
-	</main>
+  <ul>
+    <li><a href="index.html"><img src="house.jpg"></a></li>
+    <li><a href="catalog.html">Каталог</a></li>
+    <li><a href="tool.html">Инструмент</a></li>
+    <li><a href="perforators.html">Перформаторы</a></li>
+  </ul>
+  <section class="sub-menu">
+    <h3> Перфораторы </h3>
+    <h4>Производители:</h4>
+    <form><!-- Здесь будет форма "мультиселект"--></form>
+    <ul>
+      <li>Bosh</li>
+      <li>Интерскол</li>
+      <li>Makita</li>
+      <li>Dewalt</li>
+      <li>Hitachi</li>
+    </ul>
+    <h4>Питание:</h4>
+    <form><!-- Здесь будет форма "переключатель"--></form>
+    <ul>
+      <li>Аккумуляторные</li>
+      <li>Сетевые</li>
+    </ul>
+    <form><!-- Здесь будет форма "кнопка"--></form>
+    <div>Показать</div>
+    <ul>
+      <li><img src="perforator152.html"><br>
+        <p class="product-name">Перфоратор Bosh BFG 3000</p> <br>
+        <p class="old-value">22500 Р.</p> <br>
+        <p class="new-value">15500 Р.</p></li>
+      <li><img src="perforator152.html"><br>
+        <p class="product-name">Перфоратор Bosh BFG 6000</p> <br>
+        <p class="old-value">30500 Р.</p> <br>
+        <p class="new-value">25500 Р.</p></li>
+      <li><a href="buy-page.html" class="buy">Купить</a><!--тут будет форма кнопки для добавления в закладки--><br>
+        <p class="bookmarks">В закладки</p> <br>
+        <p class="product-name">Перфоратор Bosh BFG 2000</p> <br>
+        <p class="main-value">12500 Р.</p></li>
+      <li><img src="perforator152.html"><br>
+        <p class="product-name">Перфоратор Bosh BFG 3000</p> <br>
+        <p class="old-value">22500 Р.</p> <br>
+        <p class="new-value">15500 Р.</p></li>
+      <li><img src="perforator152.html"><br>
+        <p class="product-name">Перфоратор Bosh BFG 6000</p> <br>
+        <p class="old-value">30500 Р.</p> <br>
+        <p class="new-value">25500 Р.</p></li>
+      <li><img src="perforator152.html"><br>
+        <p class="product-name">Перфоратор Bosh BFG 2000</p> <br>
+        <p class="main-value">12500 Р.</p></li>
+      <li><img src="perforator152.html"><br>
+        <p class="product-name">Перфоратор Bosh BFG 3000</p> <br>
+        <p class="old-value">22500 Р.</p> <br>
+        <p class="new-value">15500 Р.</p></li>
+      <li><img src="perforator152.html"><br>
+        <p class="product-name">Перфоратор Bosh BFG 6000</p> <br>
+        <p class="old-value">30500 Р.</p> <br>
+        <p class="new-value">25500 Р.</p></li>
+      <li><img src="perforator152.html"><br>
+        <p class="product-name">Перфоратор Bosh BFG 2000</p> <br>
+        <p class="main-value">12500 Р.</p></li>
+    </ul>
+  </section>
+</main>
 <footer>
-<section class="f-1">
-<div class="low-link"><a href="index.html">Техномарт</a></div>
-<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8
-<br>+7 (812) 555-05-55
-</p>
-<ul class="articles-1">
-<li><a href="about-company.html">Компания</a></li>
-<li><a href="news.html">Новости</a></li>
-<li><a href="catalog.html">Каталог</a></li>
-<li><a href="delivery.html">Доставка</a></li>
-<li><a href="contacts.html">Контакты</a></li>
-</ul>
-<ul class="articles-2">
-<li><a href="materials.html">Материалы</a></li>
-<li><a href="technique.html">Техника</a></li>
-<li><a href="tool.html">Инструмент</a></li>
-<li><a href="suggestions.html">Спецпредложения</a></li>
-</ul>
-</section>
-<section class="f-2">
-<p>2010-2017 Компания "Техномарт"
-<br>Все права защищены
-</p>
-<a href="www.vk.com"><img src="vk.jpg"></a>
-<a href="www.facebook.com"><img src="fb.jpg"></a>
-<a href="www.instagram.com"><img src="ins.jpg"></a>
-<div>Обратная связь:
-<br><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>	
-</div>
-<div>Разработано -
-<br><a href="www.htmlacademy.ru">htmlacademy.ru</a>
-</div>
-</section>
+  <section class="f-1">
+    <div class="low-link"><a href="index.html">Техномарт</a></div>
+    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8 <br>
+      +7 (812) 555-05-55 </p>
+    <ul class="articles-1">
+      <li><a href="about-company.html">Компания</a></li>
+      <li><a href="news.html">Новости</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
+      <li><a href="delivery.html">Доставка</a></li>
+      <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+    <ul class="articles-2">
+      <li><a href="materials.html">Материалы</a></li>
+      <li><a href="technique.html">Техника</a></li>
+      <li><a href="tool.html">Инструмент</a></li>
+      <li><a href="suggestions.html">Спецпредложения</a></li>
+    </ul>
+  </section>
+  <section class="f-2">
+    <p>2010-2017 Компания "Техномарт" <br>
+      Все права защищены </p>
+    <a href="www.vk.com"><img src="vk.jpg"></a> <a href="www.facebook.com"><img src="fb.jpg"></a> <a href="www.instagram.com"><img src="ins.jpg"></a>
+    <table>
+	  <tr>Обратная связь:</tr>
+      <td><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></td>
+    <tr>Разработано -</tr>
+      <td><a href="www.htmlacademy.ru">htmlacademy.ru</a></td>
+		  </table>
+  </section>
 </footer>
 </body>
 </html>
