--- a/index.html
+++ b/index.html
@@ -1,84 +1,95 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-<meta charset="utf-8">
-<title>HTML Academy: Техномарт</title>
+	<meta charset="utf-8">
+	<title>HTML Academy: Техномарт</title>
 </head>
+
 <body>
-<header>
-  <nav>
-    <div><a href="index.html">
-      <img src="tehnomart.jpg">
-      </a></div>
-    <div><!-- Здесь будет форма input type="text" name="search"--></div>
-    <div><a href="#">Закладки: 0</a></div>
-    <div><a href="#">Корзина: 0</a></div>
-    <div><a href="#">Оформить заказ</a></div>
-  </nav>
-  <h2 class="invisible-2"> Интернет-магазин строительных материалов и инструментов для ремонта </h2>
-  <a href="#" class="tel">+7 (812) 555-05-55</a>
-  <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-  <button>Войти</button>
-  <div><a href="registration.html">Регистрация</a></div>
-  <nav>
-	<ul>
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="about-company.html">Компания</a></li>
-    <li><a href="catalog.html">Каталог</a></li>
-    <li><a href="news.html">Новости</a></li>
-    <li><a href="suggestions.html">Спецпредложения</a></li>
-    <li><a href="delivery.html">Доставка</a></li>
-    <li><a href="contacts.html">Контакты</a></li>
-  </ul>
-	  </nav>
-</header>
-<main>
-  <section class="m-5">
-    <h3>Компания "Техномарт"</h3>
-    <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными  любителей сэкономить на гастарбайтерах.</p>
-    <p>Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
-    <ul>
-      <li>Деловые линии</li>
-      <li>Автотрейдинг</li>
-      <li>ЖелДорЭкспедиция</li>
-    </ul>
-    <a href="about-company.html">Подробнее о компании</a>
-    <h3>Контакты</h3>
-    <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-    <a href="map.html"><img src="map.jpg"></a>
-    <a href="contact-to-us.html">Заблудились? Напишите нам!</a>
-  </section>
-</main>
-<footer>
-  <section class="f-1">
-    <div class="low-link"><a href="index.html">Техномарт</a></div>
-    <p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8 <br>
-      +7 (812) 555-05-55 </p>
-    <ul class="articles-1">
-      <li><a href="about-company.html">Компания</a></li>
-      <li><a href="news.html">Новости</a></li>
-      <li><a href="catalog.html">Каталог</a></li>
-      <li><a href="delivery.html">Доставка</a></li>
-      <li><a href="contacts.html">Контакты</a></li>
-    </ul>
-    <ul class="articles-2">
-      <li><a href="materials.html">Материалы</a></li>
-      <li><a href="technique.html">Техника</a></li>
-      <li><a href="tool.html">Инструмент</a></li>
-      <li><a href="suggestions.html">Спецпредложения</a></li>
-    </ul>
-  </section>
-  <section class="f-2">
-    <p>2010-2017 Компания "Техномарт" <br>
-		Все права защищены </p>
-    <a href="www.vk.com"><img src="vk.jpg"></a> <a href="www.facebook.com"><img src="fb.jpg"></a> <a href="www.instagram.com"><img src="ins.jpg"></a>
-    <table>
-	  <tr>Обратная связь:</tr>
-      <td><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></td>
-    <tr>Разработано -</tr>
-      <td><a href="www.htmlacademy.ru">htmlacademy.ru</a></td>
-		  </table>
-  </section>
-</footer>
+	<header>
+		<nav>
+			<div class="main-link">
+				<a href="index.html"> <img src="tehnomart.jpg"> </a>
+			</div>
+			<div>
+				<!-- Здесь будет форма input type="text" name="search"-->
+			</div>
+			<div><a href="#">Закладки: 0</a></div>
+			<div><a href="#">Корзина: 0</a></div>
+			<div><a href="#">Оформить заказ</a></div>
+		</nav>
+		<h2 class="main-describe">Интернет-магазин строительных материалов и инструментов для ремонта</h2> <a href="tel:+78125550555" class="tel">+7 (812) 555-05-55</a>
+		<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+		<button>Войти</button>
+		<div><a href="#">Регистрация</a></div>
+		<nav>
+			<ul>
+				<li><a href="index.html">Главная</a></li>
+				<li><a href="#">Компания</a></li>
+				<li><a href="catalog.html">Каталог</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Спецпредложения</a></li>
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section class="add-info">
+			<h3>Компания "Техномарт"</h3>
+			<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+			<p>Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
+			<ul>
+				<li>Деловые линии</li>
+				<li>Автотрейдинг</li>
+				<li>ЖелДорЭкспедиция</li>
+			</ul> <a href="#">Подробнее о компании</a>
+			<h3>Контакты</h3>
+			<p>Вы можете забрать товар сами, заехав в наш офис:</p>
+			<a href="#"><img src="map.jpg"></a> <a href="#">Заблудились? Напишите нам!</a> </section>
+	</main>
+	<footer>
+		<section class="down-menu">
+			<div class="main-link"><a href="index.html">Техномарт</a></div>
+			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8
+				<br> +7 (812) 555-05-55 </p>
+			<ul class="menu-pages">
+				<li><a href="#">Компания</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="catalog.html">Каталог</a></li>
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+			<ul class="menu-pages">
+				<li><a href="#">Материалы</a></li>
+				<li><a href="#">Техника</a></li>
+				<li><a href="#">Инструмент</a></li>
+				<li><a href="#">Спецпредложения</a></li>
+			</ul>
+		</section>
+		<section class="links">
+			<p>2010-2017 Компания "Техномарт"
+				<br> Все права защищены </p>
+			<a href="www.vk.com"><img src="vk.jpg"></a>
+			<a href="www.facebook.com"><img src="fb.jpg"></a>
+			<a href="www.instagram.com"><img src="ins.jpg"></a>
+			<table>
+				<tr>
+					<td>Обратная связь:</td>
+					<td>Разработано -</td>
+				</tr>
+				<tr>
+					<td>
+						<a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+					</td>
+					<td>
+						<a href="www.htmlacademy.ru">htmlacademy.ru</a>
+					</td>
+				</tr>
+			</table>
+		</section>
+	</footer>
 </body>
+
 </html>
