Экспортировал изображения и подключил контентные изображения

--- a/catalog.html
+++ b/catalog.html
@@ -66,12 +66,12 @@
 				<button>Показать</button>
 			</form>
 			<ul>
-				<li><img src="#">
+				<li><img src="img/Perforator_1.jpg">
 					<p class="product-name">Перфоратор Bosh BFG 3000</p>
 					<p class="old-value">22500 Р.</p>
 					<p class="new-value">15500 Р.</p>
 				</li>
-				<li><img src="#">
+				<li><img src="img/Perforator_2.jpg">
 					<p class="product-name">Перфоратор Bosh BFG 6000</p>
 					<p class="old-value">30500 Р.</p>
 					<p class="new-value">25500 Р.</p>
@@ -82,31 +82,31 @@
 					<p class="product-name">Перфоратор Bosh BFG 2000</p>
 					<p class="main-value">12500 Р.</p>
 				</li>
-				<li><img src="#">
+				<li><img src="img/Perforator_1.jpg">
 					<p class="product-name">Перфоратор Bosh BFG 3000</p>
 					<p class="old-value">22500 Р.</p>
 					<p class="new-value">15500 Р.</p>
 				</li>
-				<li><img src="#">
+				<li><img src="img/Perforator_2.jpg">
 					<p class="product-name">Перфоратор Bosh BFG 6000</p>
 					<p class="old-value">30500 Р.</p>
 					<p class="new-value">25500 Р.</p>
 				</li>
-				<li><img src="#">
+				<li><img src="img/Perforator_3.jpg">
 					<p class="product-name">Перфоратор Bosh BFG 2000</p>
 					<p class="main-value">12500 Р.</p>
 				</li>
-				<li><img src="#">
+				<li><img src="img/Perforator_1.jpg">
 					<p class="product-name">Перфоратор Bosh BFG 3000</p>
 					<p class="old-value">22500 Р.</p>
 					<p class="new-value">15500 Р.</p>
 				</li>
-				<li><img src="#">
+				<li><img src="img/Perforator_2.jpg">
 					<p class="product-name">Перфоратор Bosh BFG 6000</p>
 					<p class="old-value">30500 Р.</p>
 					<p class="new-value">25500 Р.</p>
 				</li>
-				<li><img src="#">
+				<li><img src="img/Perforator_3.jpg">
 					<p class="product-name">Перфоратор Bosh BFG 2000</p>
 					<p class="main-value">12500 Р.</p>
 				</li>
