--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 			</ul> <a href="#">Подробнее о компании</a>
 			<h3>Контакты</h3>
 			<p>Вы можете забрать товар сами, заехав в наш офис:</p>
-			<a href="#"><img src="map.jpg"></a> <a href="#">Заблудились? Напишите нам!</a> </section>
+			<a href="#"><img src=img/map.png></a> 
+			<a href="#">Заблудились? Напишите нам!</a> 
+		</section>
 	</main>
 	<footer>
 		<section class="down-menu">
