Уменьшил размеры картинок и вставил логотип

--- a/catalog.html
+++ b/catalog.html
@@ -9,9 +9,7 @@
 <body>
 	<header>
 		<nav>
-			<div class="main-link">
-				<a href="index.html"> <img src="tehnomart.jpg"> </a>
-			</div>
+			<a href="index.html" class="main-link"><img src="img/technomart.svg"></a>
 			<div>
 				<!-- Здесь будет форма input type="text" name="search"-->
 			</div>
@@ -115,7 +113,7 @@
 	</main>
 	<footer>
 		<section class="down-menu">
-			<div class="main-link"><a href="index.html">Техномарт</a></div>
+				<a href="index.html" class="main-link"><img src="img/technomart.svg"></a>
 			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8
 				<br> +7 (812) 555-05-55 </p>
 			<ul class="menu-pages">
