--- a/catalog.html
+++ b/catalog.html
@@ -10,17 +10,24 @@
 	<header>
 		<nav>
 			<a href="index.html" class="main-link"><img src="img/technomart.svg"></a>
-			<div>
-				<!-- Здесь будет форма input type="text" name="search"-->
-			</div>
+			<form action="#" method="get">
+				<input type="submit" value="" style="">
+				<label for="search">Поиск:</label>
+				<input type="text" name="search" id="search">
+			</form>
 			<div><a href="#">Закладки: 10</a></div>
 			<div><a href="#">Корзина: 0</a></div>
 			<div><a href="#">Оформить заказ</a></div>
 		</nav>
 		<h2 class="main-describe">Интернет-магазин строительных материалов и инструментов для ремонта</h2> <a href="tel:+78125550555" class="tel">+7 (812) 555-05-55</a>
 		<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-		<div><a href="#">Равшан Джамшутович</a>
-			<!-- Здесь будет форма input type="button" name="exit"-->
+		<div>
+			<a href="#"><img src="#">Равшан Джамшутович</a>
+			<form action="#" method="post">
+			<input type="button" name="exit">
+			</form>
+			<a href="#">Мои заказы</a>
+			<a href="#">Личный кабинет</a>
 		</div>
 		<nav>
 			<ul>
@@ -37,7 +44,7 @@
 	<main>
 		<ul>
 			<li>
-				<a href="index.html"><img src="house.jpg"></a>
+				<a href="index.html"><img src="#"></a>
 			</li>
 			<li><a href="catalog.html">Каталог</a></li>
 			<li><a href="#">Инструмент</a></li>
@@ -46,23 +53,26 @@
 		<section class="sub-menu">
 			<h3> Перфораторы </h3>
 			<h4>Производители:</h4>
+			<form action="#" method="get">
+				<input type="checkbox" name="Bosh" id="Bosh">
+					<label for="Bosh">Bosh</label>
+				<br><input type="checkbox" name="Interskol" id="Interskol">
+					<label for="Interskol">Интерскол</label>
+				<br><input type="checkbox" name="Makita" id="Makita">
+					<label for="Makita">Makita</label>
+				<br><input type="checkbox" name="Dewalt" id="Dewalt">
+					<label for="Dewalt">Dewalt</label>
+				<br><input type="checkbox" name="Hitachi" id="Hitachi">
+					<label for="Hitachi">Hitachi</label>
+				</form>
+			<h4>Питание:</h4>
 			<form>
-				<!-- Здесь будет input "мультиселект"-->
-				<ul>
-					<li>Bosh</li>
-					<li>Интерскол</li>
-					<li>Makita</li>
-					<li>Dewalt</li>
-					<li>Hitachi</li>
-				</ul>
-				<h4>Питание:</h4>
-				<!-- Здесь будет input "переключатель"-->
-				<ul>
-					<li>Аккумуляторные</li>
-					<li>Сетевые</li>
-				</ul>
-				<button>Показать</button>
+				<input type="radio" name="supply" value="battery" id="battery">
+					<label for="battery">Аккумуляторные</label>
+				<br><input type="radio" name="supply" value="network" id="network">
+					<label for="network">Сетевые</label>
 			</form>
+			<button>Показать</button>
 			<ul>
 				<li><img src="img/Perforator_1.jpg">
 					<p class="product-name">Перфоратор Bosh BFG 3000</p>
@@ -75,8 +85,15 @@
 					<p class="new-value">25500 Р.</p>
 				</li>
 				<li><a href="#" class="buy">Купить</a>
-					<!--тут будет форма кнопки для добавления в закладки-->
-					<p class="bookmarks">В закладки</p>
+					<br><button><p class="bookmarks">В закладки</p></button>
+					<div class="visually-hidden">
+						<p>Товар добавлен в корзину!</p>
+						<form action="#" method="post">
+							<input type="button" name="make_order" value="Оформить заказ">
+							<input type="button" name="continue" value="Продолжить покупки">
+							<input type="button" name="exit" style="#">
+						</form>
+					</div>
 					<p class="product-name">Перфоратор Bosh BFG 2000</p>
 					<p class="main-value">12500 Р.</p>
 				</li>
