--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: Техномарт</title>
+	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
+	<link href="css/normalize.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
 	<header>
-		<nav>
-			<a href="index.html" class="main-link"><img src="img/technomart.svg"></a>
+		<nav class="upper-menu">
+			<div class="upper-logo">
+			<a href="index.html" class="main-link"><img src="img/technomart.svg" class="upper-technomart"></a>
+				</div>
 			<form action="#" method="get">
 				<button name="search"></button>
 				<input type="text" name="search" placeholder="Поиск:">
@@ -18,11 +23,14 @@
 			<div><a href="#">Корзина: 0</a></div>
 			<div><a href="#">Оформить заказ</a></div>
 		</nav>
-		<h2 class="main-describe">Интернет-магазин строительных материалов и инструментов для ремонта</h2> <a href="tel:+78125550555" class="tel">+7 (812) 555-05-55</a>
+		<section class="main-info">
+		<h2 class="main-describe">Интернет-магазин <br>строительных материалов 
+		<br>и инструментов для ремонта</h2> 
+		<a href="tel:+78125550555" class="tel">+7 (812) 555-05-55</a>
 		<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-		<button name="enter">Войти</button>
-		<div class="user-info"><a href="#">Регистрация</a></div>
-		<nav>
+		<button name="enter" class="enter">Войти</button>
+		<div class="user-info"><a href="#" class="reg">Регистрация</a></div>
+		<nav class="main-menu">
 			<ul>
 				<li><a href="index.html">Главная</a></li>
 				<li><a href="#">Компания</a></li>
@@ -33,17 +41,20 @@
 				<li><a href="#">Контакты</a></li>
 			</ul>
 		</nav>
+			</section>
 	</header>
 	<main>
 		<section class="add-info">
 			<h3>Компания "Техномарт"</h3>
 			<p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
 			<p>Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
-			<ul>
+			<ul class="delivery">
 				<li>Деловые линии</li>
 				<li>Автотрейдинг</li>
 				<li>ЖелДорЭкспедиция</li>
-			</ul> <a href="#">Подробнее о компании</a>
+			</ul> 
+			<div class="about-us"><a href="#" class="info-message">Подробнее о компании</a>
+			</div>
 			<h3>Контакты</h3>
 			<p>Вы можете забрать товар сами, заехав в наш офис:</p>
 			<a href="#"><img src="img/map.png"></a>
@@ -51,12 +62,16 @@
 			<img src="#" name="big_map">
 				<button name="exit"><img src="#"></button>
 			</div>
-			<a href="#">Заблудились? Напишите нам!</a> 
+			<div class="write-to-us">
+			<a href="#" class="info-message">Заблудились? Напишите нам!</a> 
+			</div>
 		</section>
 	</main>
 	<footer>
 		<section class="down-menu">
-			<a href="index.html" class="main-link"><img src="img/technomart.svg"></a>
+			<div class="down-logo">
+			<a href="index.html" class="main-link"><img src="img/technomart.svg" class="down-technomart"></a>
+				</div>
 			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8
 				<br> +7 (812) 555-05-55 </p>
 			<ul class="menu-pages">
@@ -66,7 +81,7 @@
 				<li><a href="#">Доставка</a></li>
 				<li><a href="#">Контакты</a></li>
 			</ul>
-			<ul class="menu-pages">
+			<ul class="menu-pages-mat">
 				<li><a href="#">Материалы</a></li>
 				<li><a href="#">Техника</a></li>
 				<li><a href="#">Инструмент</a></li>
@@ -80,11 +95,11 @@
 			<a href="www.facebook.com"><img src="fb.jpg"></a>
 			<a href="www.instagram.com"><img src="ins.jpg"></a>
 			<table>
-				<tr>
+				<tr class="tab-article">
 					<td>Обратная связь:</td>
 					<td>Разработано -</td>
 				</tr>
-				<tr>
+				<tr class="tab-links">
 					<td>
 						<a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
 					</td>
