--- a/catalog.html
+++ b/catalog.html
@@ -6,50 +6,42 @@
 	<title>HTML Academy: Техномарт</title>
 	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-</head>
+	<link href="css/style.css" rel="stylesheet"> </head>
 
 <body>
 	<header>
 		<nav class="upper-menu">
 			<div class="upper-logo">
-			<a href="index.html" class="main-link"><img src="img/technomart.svg" class="upper-technomart"></a>
-				</div>
+				<a href="index.html" class="main-link"><img src="img/technomart.svg" class="upper-technomart"></a>
+			</div>
 			<form action="#" method="get">
 				<button name="search"></button>
-				<input type="text" name="search" placeholder="Поиск:">
-			</form>
-			<div><a href="#">Закладки: 10</a></div>
-			<div><a href="#">Корзина: 0</a></div>
-			<div><a href="#">Оформить заказ</a></div>
-		</nav>
+				<input type="text" name="search" placeholder="Поиск:"> </form> <a href="#" class="main-action">Закладки: 10</a> <a href="#" class="main-action">Корзина: 0</a> <a href="#" class="main-action">Оформить заказ</a> </nav>
 		<section class="main-info">
-		<h2 class="main-describe">Интернет-магазин <br>строительных материалов 
-		<br>и инструментов для ремонта</h2> 
-		<a href="tel:+78125550555" class="tel">+7 (812) 555-05-55</a>
-		<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
-		<div class="user-info">
-			<a href="#" class="enter">Равшан Джамшутович</a>
-			<form action="#" method="post">
-			<button name="exit"></button>
-			</form>
-			<ul class="orders-cab">
-				<li><a href="#">Мои заказы</a></li>
-			    <li><a href="#">Личный кабинет</a></li>
-			</ul>
-		</div>
-		<nav class="main-menu">
-			<ul>
-				<li><a href="index.html">Главная</a></li>
-				<li><a href="#">Компания</a></li>
-				<li><a href="catalog.html">Каталог</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="#">Спецпредложения</a></li>
-				<li><a href="#">Доставка</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
-		</nav>
-			</section>
+			<h2 class="main-describe">Интернет-магазин <br>строительных материалов 
+		<br>и инструментов для ремонта</h2> <a href="tel:+78125550555" class="tel">+7 (812) 555-05-55</a>
+			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8</p>
+			<div class="user-info"> <a href="#" class="enter">Равшан Джамшутович</a>
+				<form action="#" method="post">
+					<button name="exit"></button>
+				</form>
+				<ul class="orders-cab">
+					<li><a href="#">Мои заказы</a></li>
+					<li><a href="#">Личный кабинет</a></li>
+				</ul>
+			</div>
+			<nav class="main-menu">
+				<ul>
+					<li><a href="index.html">Главная</a></li>
+					<li><a href="#">Компания</a></li>
+					<li><a href="catalog.html">Каталог</a></li>
+					<li><a href="#">Новости</a></li>
+					<li><a href="#">Спецпредложения</a></li>
+					<li><a href="#">Доставка</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</nav>
+		</section>
 	</header>
 	<main>
 		<ul class="navigation">
@@ -65,25 +57,39 @@
 			<h4>Производители:</h4>
 			<form action="#" method="get">
 				<ul>
-				<li>
-					<label><input type="checkbox" name="Bosh">Bosh</label></li>
-				<li>
-					<label><input type="checkbox" name="Interskol">Интерскол</label></li>
-				<li>
-					<label><input type="checkbox" name="Makita">Makita</label></li>
-				<li>
-					<label><input type="checkbox" name="Dewalt">Dewalt</label></li>
-				<li>
-					<label><input type="checkbox" name="Hitachi">Hitachi</label></li>
+					<li>
+						<label>
+							<input type="checkbox" name="Bosh">Bosh</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" name="Interskol">Интерскол</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" name="Makita">Makita</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" name="Dewalt">Dewalt</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" name="Hitachi">Hitachi</label>
+					</li>
 				</ul>
-			<h4>Питание:</h4>
+				<h4>Питание:</h4>
 				<ul>
-				<li>
-					<label><input type="radio" name="supply" value="battery">Аккумуляторные</label></li>
-				<li>
-					<label><input type="radio" name="supply" value="network">Сетевые</label></li>
+					<li>
+						<label>
+							<input type="radio" name="supply" value="battery">Аккумуляторные</label>
+					</li>
+					<li>
+						<label>
+							<input type="radio" name="supply" value="network">Сетевые</label>
+					</li>
 				</ul>
-			<button>Показать</button>
+				<button>Показать</button>
 			</form>
 			<ul>
 				<li><img src="img/Perforator_1.jpg">
@@ -96,8 +102,7 @@
 					<p class="old-value">30500 Р.</p>
 					<p class="new-value">25500 Р.</p>
 				</li>
-				<li><a href="#" class="buy">Купить</a>
-					<a href="#" class="bookmarks">В закладки</a>
+				<li><a href="#" class="buy">Купить</a> <a href="#" class="bookmarks">В закладки</a>
 					<p class="product-name">Перфоратор Bosh BFG 2000</p>
 					<p class="main-value">12500 Р.</p>
 				</li>
@@ -136,7 +141,7 @@
 		<section class="down-menu">
 			<div class="down-logo">
 				<a href="index.html" class="main-link"><img src="img/technomart.svg" class="down-technomart"></a>
-				</div>
+			</div>
 			<p>г. Санкт-Петербург, ул. Б. Конюшенная, д.19/8
 				<br> +7 (812) 555-05-55 </p>
 			<ul class="menu-pages">
@@ -165,21 +170,16 @@
 					<td>Разработано -</td>
 				</tr>
 				<tr class="tab-links">
-					<td>
-						<a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-					</td>
-					<td>
-						<a href="www.htmlacademy.ru">htmlacademy.ru</a>
-					</td>
+					<td> <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a> </td>
+					<td> <a href="www.htmlacademy.ru">htmlacademy.ru</a> </td>
 				</tr>
 			</table>
 		</section>
 	</footer>
 	<div class="visually-hidden">
-						<p>Товар добавлен в корзину!</p>
-							<a href="#">Оформить заказ</a>
-							<a href="#">Продолжить покупки</a>
-							<button name="exit" style="#"></button>
-		</div>
+		<p>Товар добавлен в корзину!</p> <a href="#">Оформить заказ</a> <a href="#">Продолжить покупки</a>
+		<button name="exit" style="#"></button>
+	</div>
 </body>
+
 </html>
